// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldSla Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
    "value": "Premium",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
    "value": "Standard",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
    "value": "Self-Support",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldSla Component should handle updating sla through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "sla",
        "type": "SET_QUERY",
        "value": "Premium",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should handle updating sla through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "sla",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should render a basic component: basic 1`] = `
<Select
  alignment={
    {
      "position": "left",
    }
  }
  aria-label="t(curiosity-toolbar.placeholder, {"context":"sla"})"
  data-test="toolbarFieldSla"
  onSelect={[Function]}
  options={
    [
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
        "value": "Premium",
      },
      {
        "isSelected": true,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
        "value": "Standard",
      },
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
        "value": "Self-Support",
      },
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
        "value": "",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"sla"})"
  selectedOptions="Standard"
/>
`;
